summative.moria.Moria.scala.error
Compilation error:
Moria:15: error: not found: value Direction
  if (getDirection()==Direction.EST)
                      ^Moria:20: error: not found: value Direction
    setDirection(Direction.OUEST)
                 ^Moria:29: error: not found: value Direction
  if (getDirection()==Direction.EST)
                      ^Moria:39: error: not found: value Direction
      setDirection(Direction.EST)
                   ^